--- a/client/src/Pages/Homepage/style.css
+++ b/client/src/Pages/Homepage/style.css
@@ -2,8 +2,28 @@ body{
     background-color: #8A8A8A;
 }
 .homebio{
-    background-color: #D1C0A8;
+    background-color: #D1C0A8 !important;
+    width: 90% !important;
+    max-height: 441px;
+    max-width: 1240px;
+    display: flex;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: "Oswald", sans-serif;
 }
-.image{
-    width: 100%;
+.imagebackground{
+    background-color: #D1C0A8;
+    width: 40% !important;
+    max-height: 441px;
+    max-width: 620px;
+    display: flex;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+@media (max-width: 992px){
+    .imagebackground{
+        width: 90% !important;
+    }
 }
