added styling to contact, duplicate contact links to contact, added pdf version of resume to resume page with styling and failsafe for page render

--- a/client/src/Pages/Contactpage/style.css
+++ b/client/src/Pages/Contactpage/style.css
@@ -19,3 +19,9 @@
     background-color: #D1C0A8;
     border-color: #5d5c61;
 }
+#email{
+    color: #D1C0A8;
+}
+.form-control:focus{
+    background-color: #659DBD;
+}
