--- a/client/src/Pages/Contactpage/style.css
+++ b/client/src/Pages/Contactpage/style.css
@@ -25,3 +25,16 @@
 .form-control:focus{
     background-color: #659DBD;
 }
+
+#captchaBox{
+    width: 100%;
+    max-width: unset;
+    padding: 0;
+}
+
+#captchaBox > div > div > div{
+    display: flex !important;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+}
